# NextGen_DataCatalog

./: .gitignore  GITHUB_PAGES.md  Makefile  README-template.md  README.md  finish-microsite.sh  update-main.sh
.github/ISSUE_TEMPLATE/: bug_report.yaml  docs_website_change.yaml  generic_issue.yaml  question.yaml  roadmap_modification.yaml
demo/: README.md  pyproject.toml
demo/src/: delete.py  filter.py  load.py
docs/: _config.yml  about.markdown  contributing.markdown  index.markdown  second_page.markdown
docs/_includes/css/: custom.scss.liquid
docs/_layouts/: default.html
docs/nested/: nested.markdown  nested_child.markdown
